# gemma-epub-translator

./: .gitignore  Cargo.toml  DocumentTypes.plistappend  README.md
src/: epub_processor.rs  epub_rebuild.rs  locale.rs  main.rs  translate.rs  ui.rs
src/processors/: epub_processor.rs  epub_rebuild.rs  mod.rs  srt_processor.rs
src/ui/: app.rs  epub_view.rs  mod.rs
src/ui/mycacao/: alert.rs
src/ui/views/: epub_view.rs  mod.rs  srt_view.rs
