[package]
name = "gemma-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
cacao = {  git = "https://github.com/orionlize/cacao", branch = "trunk", features = ["appkit", "autolayout"] } # Verze s dobrou podporou AppKit
epub = "^2.1"
llama-cpp-2 = { version = "0.1.132", features = ["metal"] }
image = "^0.25"
lol_html = "^1.2"
zip = "^0.6"
thiserror = "^2"

[package.metadata.bundle]
name = "Gemma EPUB Translator"
identifier = "com.github.EETagent.gemma-translator"
version = "0.1.0"
copyright = "2026, EETagent"
category = "public.app-category.productivity"
short_description = "Translate EPUB files using Gemma"
resources = ["models/translategemma-12b-it.Q4_K_M.gguf"]
entitlements = "entitlements.plist"
osx_info_plist_exts = ["DocumentTypes.plistappend"]
